Tweak jdk9+ warning